--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,3 @@
-buildscript {
-	configurations {
-		classpath {
-			exclude group: 'com.diffplug.spotless'
-		}
-	}
-}
-
 plugins {
 	id 'java'
 	id "com.diffplug.spotless" version "6.25.0"
@@ -42,6 +34,7 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 spotless {
+	enforceCheck false
 	// optional: limit format enforcement to just the files changed by this feature branch
 	//ratchetFrom 'origin/main'
 
